# Message-Compiler

./: .gitignore  README.md  pyproject.toml
src/message_hub/app/: imap_demo.py  main.py  sync_imap.py
src/message_hub/connectors/: imap_connector.py
src/message_hub/services/: imap_sync.py  message_actions.py  message_repo.py
src/message_hub/storage/: db.py  models.py
src/message_hub/ui/: imap_dialog.py  message_detail.py  workers.py
src/message_hub_desktop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
