[project]
name = "message-hub-desktop"
version = "0.1.0"
description = "Desktop app that aggregates messages from multiple sources (Gmail/Outlook/IMAP) into one inbox."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "SQLAlchemy>=2.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
